--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -338,6 +338,13 @@
 
     </div><!-- #container -->
 
+    {% if page_title != 'Gifpop!' %}
+      <a class="credit" href="/products/zwian">
+        <p>GIF by Zwian</p>
+        <div class="upp">View this print</div>
+      </a>
+    {% endif %}
+
     </div><!-- #outer-container -->
 
 
