--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -2518,6 +2518,7 @@ a.slide-link {
 .question {
   width: 50%;
   float: left;
+  text-align: left;
   height: 110px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #808080;
@@ -2527,28 +2528,32 @@ a.slide-link {
 .question p {
   margin: 5px 0;
 }
-.question:nth-child(odd) {
-  padding: 0 20px 0 100px;
-}
 .question:nth-child(even) {
-  padding: 0 90px 0 20px;
+  padding: 0 20px 0 0;
+}
+.question:nth-child(odd) {
+  padding: 0 0 0 20px;
 }
 .question .header {
   font-weight: bold;
 }
-.signup {
+.exp-text-block .signup {
   color: #808080;
-  width: 410px;
+  width: 460px;
   margin: 0 auto;
   text-align: center;
   clear: both;
-  padding-top: 20px;
+  padding-top: 4em;
+}
+#exp-text .signup p {
+  color: #fff;
 }
 #mce-EMAIL {
   border-radius: 0;
   float: left;
-  width: 250px;
-  margin-left: 7px;
+  width: 300px;
+  margin-right: 7px;
+  padding: 10px 9px 9px;
 }
 #mc-embedded-subscribe {
   font-weight: 100;
@@ -2832,13 +2837,17 @@ h1.page-title {
   padding-top: 10px;
   margin-top: 20px;
 }
-.exp-text-block {
+#how-it-works #exp-text {
+  border-top: none;
+}
+#exp-text .exp-text-block {
   width: 80%;
   margin: 4em 10%;
   text-align: center;
 }
 .exp-text-block h2 {
   width: 100%;
+  text-transform: uppercase;
 }
 
 #exp-text h2 {
