adding unmaru to example, removing illustrations

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -91,7 +91,7 @@
                         <p>People are making amazing things with Gifpop. Here are some of our favorites.</p>
 
                         <a href="http://blog.gifpop.io/post/70435876361/wells-riley-is-too-cool-deal-with-it"><img src="" data-echo="{{ 'preview-metagif-wellsriley.gif' | asset_url }}" width="250px" height="250px" /></a>
-                        <a href="http://blog.gifpop.io/post/79402473598/stallio-some-scrambled-tv-lenticular-style"><img src="" data-echo="{{ 'preview-metagif-stallio.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="http://unmaru.com/post/99617625849/this-is-super-long-overdue-i-know-so-i-finally"><img src="" data-echo="{{ 'preview-metagif-unmaru.gif' | asset_url }}" width="250px" height="250px" /></a>
                         <a href="http://blog.gifpop.io/post/70299015811/traceloops-gifpop-prints-arrived-in-the-mail"><img src="" data-echo="{{ 'preview-metagifs-traceloops.gif' | asset_url }}" width="250px" height="250px" /></a>
 
                       </div>
@@ -122,21 +122,18 @@
                               <h2>GET YOUR GIF ON!</h2>
                               <ul class="make-options">
                                   <li>
-                                      <img src="" data-echo="{{ 'upload.png' | asset_url }}" width="250px" height="200px" />
                                       <div class="cta">
-                                        <a class="link-button skew" href="/products/gifchop">Gif Chop</a>
+                                        <a class="link-button skew" href="/products/gifchop">Start with a Gif</a>
                                       </div>
                                       <h5>Gifs, Vines, Instagrams</h5>
                                   </li>
                                   <li>
-                                      <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
                                       <div class="cta">
-                                        <a class="link-button skew" href="/products/gifchop">Flip Flop</a>
+                                        <a class="link-button skew" href="/products/gifchop">Start with two images</a>
                                       </div>
                                       <h5>Fade between two images</h5>
                                   </li>
                                   <li>
-                                      <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
                                       <div class="cta">
                                         <a class="link-button skew" href="/collections/artists">Featured Artists</a>
                                       </div>
