--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1567,6 +1567,10 @@ nav {
   padding:20px 0 30px;
 }
 
+.make-options li {
+  width: 250px;
+}
+
 /* Footer */
 /* ==================================== */
 
