--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -2845,6 +2845,9 @@ h1.page-title {
   margin: 4em 10%;
   text-align: center;
 }
+#exp-text .exp-text-block:last-child {
+  margin-bottom: 1em;
+}
 .exp-text-block h2 {
   width: 100%;
   text-transform: uppercase;
@@ -2969,7 +2972,6 @@ h1.page-title {
 #product-content {
   width:884px;
   margin: 0 auto;
-  padding-bottom:40px;
   position: relative;
 }
 
