--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,11 +80,16 @@
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | split: '.' | first | remove: '/' | remove: '_' }} {% if template == 'index' %}index{% endif %}">
 
 
-  {% if page_title != 'Gifpop!' %}
-  <div id="bg-container">{{ page_title }}</div>
-  {% endif %}
-
   <div id="outer-container">
+
+    {% if page_title != 'Gifpop!' %}
+    <!-- <div id="bg-container">{{ page_title }}</div> -->
+    <div class="sprite-bg" data-frames="8" data-speed="4">
+      <img src="" data-echo="{{ '06-pages.jpg' | asset_url }}" />
+    </div>
+    <div class="bg-vignette bg-vignette-very-dark"></div>
+    {% endif %}
+
   <div id="container">
 
     <header id="header" class="clearfix{% if settings.use_logo %} use-logo{% endif %}{% if settings.show_multiple_currencies %} currencies{% endif %}{% if settings.force_wide_view %} wide{% endif %}">
