copy changes on artists page

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -89,7 +89,7 @@
     <div id="exp-text">
       <div class="exp-text-block">
         <h2>ART FOR ALL</h2>
-        <p><b>These artists have all been exploring animated gifs in beautiful, funny, and mindblowing ways.</b> And as designers ourselves, we understand the constant struggle between creating work that you are passionate about and paying the bills. So we want to celebrate and support this emerging medium by offering prints of this amazing work and send the profits to the artists. </p>
+        <p><b>These artists are all exploring animated gifs in beautiful, funny, and mindblowing ways.</b> And as designers ourselves, we understand the constant struggle between creating work that you are passionate about and paying the bills. So we want to celebrate and support this emerging medium by offering prints of this amazing work and send the profits to the artists. </p>
       </div>
       <div class="exp-text-block">
         <img class="exp-image" src="http://cdn.gifpop.io/static/images/sample_gifs/dvdp_large_390.gif" />
