--- a/assets/chris.css.liquid
+++ b/assets/chris.css.liquid
@@ -293,9 +293,17 @@ h5 {
     line-height: 140%;
   }
 }
-.home-container .cta {
-  margin: 3em 0;
+.index .cta {
+  margin: 3em 0 1em;
   position: relative;
+}
+@media (min-width: 1030px) {
+  .index .cta {
+    margin: 3em 0;
+  }
+}
+.make-options {
+  padding: 0;
 }
 
 .bg-vignette {
@@ -470,7 +478,7 @@ h5 {
   box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: white;
   font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.25em;
+  font-size: 1.2em;
   font-weight: 300;
   height: 1.3em;
   line-height: 1.6em;
@@ -552,17 +560,20 @@ h5 {
 }
 .footer-summary img {
   margin: 0.5em;
-  width: 250px;
+  width: 120px;
+  height: 120px;
 }
 @media (min-width: 768px) {
   .footer-summary img {
     margin: 10px 15px;
     width: 200px;
+    height: 200px;
   }
 }
 @media (min-width: 1030px) {
   .footer-summary img {
     width: 250px;
+    height: 250px;
     margin: 20px 35px;
   }
 }
