--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -95,31 +95,30 @@
                         <a href="http://blog.gifpop.io/post/70299015811/traceloops-gifpop-prints-arrived-in-the-mail"><img src="" data-echo="{{ 'preview-metagifs-traceloops.gif' | asset_url }}" width="250px" height="250px" /></a>
 
                       </div>
+
+                      <div class="artist-gifs footer-summary">
+                          <h2>Support GIF artists</h2>
+                          <p>We work with the most bitflippin' artists on the Internet to print limited editions of their work.</p>
+                          <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'preview-artists-beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
+                          <a href="/products/cindy-suen"><img src="" data-echo="{{ 'preview-artists-cindy.gif' | asset_url }}" width="250px" height="250px" /></a>
+                          <a href="/products/gnumblr"><img src="" data-echo="{{ 'preview-artists-gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
+                          <div class="cta">
+                              <a class="link-button skew" href="/collections/artists">See More Art Prints</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
+                  <a class="credit" href="/products/dvdp-140405">
+                    <p>GIF by Davidope</p>
+                    <div class="upp">View this print</div>
+                  </a>
                 </div>
 
                 <div id="home-footer" class="home-container resize-height" data-height="100">
-                  <div class="sprite-bg" data-frames="10" data-speed="8">
-                    <img src="" data-echo="{{ '05-footer.png' | asset_url }}" />
-                  </div>
-                  <div class="bg-vignette bg-vignette-very-dark"></div>
                    <div class="content">
                       <div class="wrap">
-
-                          <div class="artist-gifs footer-summary">
-                              <h2>Support GIF artists</h2>
-                              <p>We work with the most bitflippin' artists on the Internet to print limited editions of their work.</p>
-                              <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'preview-artists-beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
-                              <a href="/products/cindy-suen"><img src="" data-echo="{{ 'preview-artists-cindy.gif' | asset_url }}" width="250px" height="250px" /></a>
-                              <a href="/products/gnumblr"><img src="" data-echo="{{ 'preview-artists-gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
-                              <div class="cta">
-                                  <a class="link-button skew" href="/collections/artists">See More Art Prints</a>
-                              </div>
-                          </div>
-
-                          <div class="footer-summary">
-                              <h2>GET YOUR GIF ON!</h2>
+                        <div class="footer-summary">
+                            <h2>GET YOUR GIF ON!</h2>
                               <ul class="make-options">
                                   <li>
                                       <div class="cta">
@@ -140,13 +139,26 @@
                                       <h5>View the featured artists gallery</h5>
                                   </li>
                               </ul>
+                              <div class="gift-card-wrapper">
+                                <h3>Or, purchase a gif-t card:</h3>
+                                <div style="display: inline-block;">
+                                  <form method="post" action="/cart/add">
+                                    <input type="hidden" name="id" value="$10" />
+                                    <input class="button gift-card" type="submit" value="$10" />
+                                  </form>
+                                  <form method="post" action="/cart/add">
+                                    <input type="hidden" name="id" value="$20" />
+                                    <input class="button gift-card" type="submit" value="$20" />
+                                  </form>
+                                  <form method="post" action="/cart/add">
+                                    <input type="hidden" name="id" value="$50" />
+                                    <input class="button gift-card" type="submit" value="$50" />
+                                  </form>
+                                </div>
+                              </div>
                           </div>
                       </div>
                   </div>
-                  <a class="credit" href="/products/dvdp-140405">
-                    <p>GIF by Davidope</p>
-                    <div class="upp">View this print</div>
-                  </a>
               </div>
         </div>
 
